syntax = "proto3";

package protocol;

import "google/rpc/status.proto";

// Represents a single triple (entity, attribute, value) in the database.
message Triple {
  // Unique identifier for the entity. Must be exactly 16 bytes.
  // Requests with entity IDs of other lengths will be rejected with
  // InvalidArgument.
  optional bytes entity_id = 1;
  // Unique identifier for the attribute. Must be exactly 16 bytes.
  // Requests with attribute IDs of other lengths will be rejected with
  // InvalidArgument.
  optional bytes attribute_id = 2;
  // The value associated with this entity-attribute pair.
  TripleValue value = 3;
}

// The value component of a triple. Supports string, number, and boolean types.
message TripleValue {
  oneof value {
    // String value. Maximum length is 1024 characters.
    // Strings exceeding this limit will be rejected with InvalidArgument.
    string string = 3;
    // Numeric value (IEEE 754 double-precision floating point).
    double number = 4;
    // Boolean value.
    bool boolean = 5;
  }
}

message ClientMessage {
  // A unique ID determined by the client. This ID enables the client
  // to match the request and response, as well as allow for idempotent retries.
  optional uint32 request_id = 1;
  oneof payload {
    TripleUpdateRequest triple_update_request = 2;
    QueryRequest query = 3;
    // SubscribeRequest subscribe = 3; // Reactive subscription
    // uint32 unsubscribe_id = 4; // subscription_id to stop
  }
}

message QueryRequest {
  // These are the fields to return
  repeated QueryPatternVariable find = 1;
  // The patterns to match against
  repeated QueryPattern where = 2;
  // Optional patterns (left join semantics)
  repeated QueryPattern optional = 3;
  // Negation patterns (anti-join)
  repeated QueryPattern where_not = 4;
}

message QueryPattern {
  oneof entity {
    bytes entity_id = 1;
    QueryPatternVariable entity_variable = 2;
  }

  oneof attribute {
    bytes attribute_id = 3;
    QueryPatternVariable attribute_variable = 4;
  }

  oneof value_group {
    TripleValue value = 5;
    QueryPatternVariable value_variable = 6;
  }
}

message QueryPatternVariable {
  optional string label = 1;
}

// message SubscribeRequest {
//   uint32 subscription_id = 1;
//   // repeated Pattern patterns = 2;
//   string since_hlc = 3; // Optional: Resume from this point
// }

message TripleUpdateRequest {
  repeated Triple triples = 1;
}

message ServerMessage {
  ServerResponse response = 1;
  // oneof payload {
  //   // QueryResult result = 2; // Response to QueryRequest
  //   // TripleUpdate update = 3; // Streamed update from subscription
  //   // Ack ack = 4; // Response to TransactRequest
  // }
}

// A single value in a query result row
message QueryResultValue {
  oneof value {
    string id = 1; // Entity or Field ID as string
    TripleValue triple_value = 2; // Actual value (string, number, boolean)
  }
  bool is_undefined = 3; // True if value is missing (for optional patterns)
}

// A row of query results
message QueryResultRow {
  repeated QueryResultValue values = 1;
}

message ServerResponse {
  optional uint32 request_id = 1;
  optional google.rpc.Status status = 2;
  // Query results (populated for QueryRequest responses)
  repeated Triple triples = 3;
  // Columnar query results
  repeated string columns = 4;
  repeated QueryResultRow rows = 5;
}
